# EdgeCLI

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  preview.yml
edgecli/: __init__.py
edgecli/backend/: __init__.py
edgecli/backend/core/: __init__.py  config_manager.py  proxy_manager.py  xray_manager.py
edgecli/backend/models/: __init__.py  client_config.py  server_config.py
edgecli/backend/services/: __init__.py  crypto_service.py  dns_service.py  link_service.py
edgecli/backend/utils/: __init__.py  system_utils.py  validation_utils.py
edgecli/frontend/: __init__.py
edgecli/frontend/cli/: __init__.py  client_cli.py  main_cli.py  server_cli.py
edgecli/frontend/ui/: __init__.py  display.py  input_handler.py  menu.py
edgecli/frontend/utils/: __init__.py  clipboard_utils.py
